--- a/extern/abcrown.yaml
+++ b/extern/abcrown.yaml
@@ -2,10 +2,10 @@ general:
     device: cpu
 
 model:
-    onnx_path: ../onnx/unsat_v2_c3.onnx
+    onnx_path: ./onnx/unsat_v2_c3.onnx
 
 specification:
-    vnnlib_path: ../vnnlib/unsat_v2_c3.vnnlib
+    vnnlib_path: ./vnnlib/unsat_v2_c3.vnnlib
 solver:
     batch_size: 32 # Decreased for slower, more iterative processing
     early_stop_patience: -1
@@ -17,7 +17,7 @@ bab:
     initial_max_domains: 4 # Increased to start with more domains
     max_domains: 100 # Capped to allow extensive but controlled exploration
     pruning_in_iteration_ratio: 0.5 # Less aggressive pruning
-    timeout: 20
+    timeout: 900
     branching:
         method: naive # Changed to support input splits
         enable_intermediate_bound_opt: true
